--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -119,7 +119,7 @@
     @include media-query($mobile) {
         position: absolute;
         top: 0.75em;
-        right: 20px;
+        right: 0;
         border: 1px solid $line-color;
         border-radius: 5px;
         text-align: right;
